# ceres-projeto-gemoi

./: .gitignore  Search_Api.py  noticias_para_analise.csv  noticias_para_envio.csv  noticias_para_historico.csv  requirements.txt  teste.py
Playwright - Custodia Bradesco/: package-lock.json  package.json
SUCON - Ambiente de Relatórios/: .env.example  .gitignore  README.md  propriedades.txt  pyproject.toml  requirements.txt
SUCON - Ambiente de Relatórios/credentials/: google_credentials.json  token.json
SUCON - Ambiente de Relatórios/src/: app.py
SUCON - Ambiente de Relatórios/src/.streamlit/: config.toml  secrets.toml
SUCON - Ambiente de Relatórios/src/data/: ddq.db
SUCON - Ambiente de Relatórios/src/pages/: p0_teste.py  pg_inicial.py  risco_mercado_ativos.py  risco_mercado_planos.py  s1_enquadramento_planos.py  s1_lim_op.py  s2_risco_ativos.py  s3_due_diligence_hp.py  s3_due_diligence_questionario.py  s3_due_diligence_settings.py  s4_rentabilidade.py
SUCON - Ambiente de Relatórios/src/style/: style.css
SUCON - Ambiente de Relatórios/src/utils/: db_oracle.py  db_sqlserver.py  gerar_pdf.py  helpers.py  load_css.py  rentabilidade_projetada.csv
SUCON - Ambiente de Relatórios/src/utils/ddq_utils/: con_gsheets.py  criar_db.py  crud.py  db_ddq.py  etl.py
SUCON - Ambiente de Relatórios/src/utils/queries/: enquadramento.py  ipca.py  lim_operacionais.py  rent_grupos.py  rent_mensal_planos.py  rent_planos.py  rent_produtos.py  risco_mercado_ativos.py  risco_mercado_planos.py  risco_mercado_segmentos.py  tickerh_rent_planos.py
bot-monitoramento/: E4_alvo_DB.py  (+10 more)
(+10 files in other folders)
